<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arceusback"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.saifil.arceusrealestate.ContactActivity"
    tools:showIn="@layout/activity_contact">

    <EditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/body_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/submit"
        style="@style/buttonStyle"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="63dp"
        android:text="@string/contact_us_title"
        style="@style/textMain"/>
</RelativeLayout>
