<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.saifil.arceusrealestate.TestimonialActivity"
    tools:showIn="@layout/activity_testimonial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/slowpoke" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slowpoke_text"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    style="@style/textMain"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/slow_sub"
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/ludikolo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ludikolo"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    style="@style/textMain"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/ludi_sub"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/magikarp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magikarp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    style="@style/textMain"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/karp_sub"
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
